<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/text_spacing"
    android:paddingHorizontal="@dimen/default_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/product_name_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_spacing"
        android:layout_marginEnd="@dimen/text_spacing"
        android:ellipsize="end"
        android:lines="1"
        android:maxLines="1"
        android:text="@string/meta_earrings"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/dark"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/image_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_price_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12"
            android:textSize="17sp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/color_secondary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/product_description_id"
            app:layout_constraintTop_toBottomOf="@+id/product_description_id" />

        <TextView
            android:id="@+id/product_description_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_spacing"
            android:text="@string/special_design"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/dark_light"
            android:textSize="16sp"
            android:lines="1"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="@+id/product_name_id"
            app:layout_constraintStart_toStartOf="@+id/product_name_id"
            app:layout_constraintTop_toBottomOf="@+id/product_name_id" />

        <LinearLayout
            android:id="@+id/image_container"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/product_img_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/home_label"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image3" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/default_margin"
            android:text="@string/in_stock"
            android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/red_200"
            app:layout_constraintEnd_toEndOf="@+id/product_description_id"
            app:layout_constraintStart_toEndOf="@+id/product_price_id"
            app:layout_constraintTop_toBottomOf="@+id/product_description_id" />

</androidx.constraintlayout.widget.ConstraintLayout>