<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardElevation="5dp"
    android:transitionName="@string/transition_image_name"
    app:cardCornerRadius="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingBottom="@dimen/text_spacing"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/product_name_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_margin"
            android:text="@string/meta_earrings"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/dark"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_container" />

        <TextView
            android:id="@+id/product_price_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1,000 XFA"
            android:layout_marginTop="@dimen/text_spacing"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/color_secondary"
            android:textStyle="bold"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_description_id" />

        <TextView
            android:id="@+id/product_description_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/text_spacing"
            android:text="@string/special_design"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/dark_light"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_name_id" />

        <RelativeLayout
            android:id="@+id/image_container"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/product_img_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image3"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/home_label" />

            <ImageButton
                android:id="@+id/add_toCart"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:elevation="20dp"
                app:elevation="20dp"
                android:contentDescription="@string/add_to_cart"
                android:layout_alignEnd="@+id/product_img_id"
                android:layout_alignBottom="@+id/product_img_id"
                android:background="@drawable/bg_shop"
                android:foregroundGravity="center"
                android:padding="@dimen/text_spacing"
                android:src="@drawable/ic_shop"
                app:tint="@color/white" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>