<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/toolbar_elevation"
    app:cardMaxElevation="@dimen/default_max_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/text_spacing">

        <ImageButton
            android:id="@+id/back_id"
            android:layout_width="@dimen/toolbar_size"
            android:layout_height="@dimen/toolbar_size"
            android:layout_marginStart="@dimen/default_margin"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/cart_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="back"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/cart_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@color/color_secondary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_id" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:padding="@dimen/text_spacing"
            android:text="@string/_3_items"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="@dimen/text_spacing"
            android:focusable="true"
            android:padding="@dimen/text_spacing"
            android:text="@string/delete_selected"
            android:textColor="@color/dark"
            android:textSize="@dimen/default_text_size"
            app:drawableStartCompat="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="@dimen/text_spacing"
            android:focusable="true"
            android:padding="@dimen/text_spacing"
            android:text="@string/select_all"
            android:textColor="@color/dark"
            android:textSize="@dimen/default_text_size"
            app:drawableStartCompat="@drawable/ic_check"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>